fix table on mobile to show table labels next to each result

--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -149,7 +149,7 @@ tr:hover {
 }
 
 @media (max-width: 600px) {
-  table, thead, tbody, th, td, tr {
+  table, td, tr {
       display: block;
   }
 
@@ -159,17 +159,21 @@ tr:hover {
 
   td {
     text-align: right;
-    padding-left: 50%;
+    padding-left: 20%;
     position: relative;
   }
 
   td::before {
     content: attr(data-label);
     position: absolute;
-    left: 15px;
-    width: 45%;
+    left: 5px;
+    width: 15%;
     padding-left: 10px;
     font-weight: bold;
     text-align: left;
+  }
+
+  .hide-on-narrow {
+        display: none;
   }
 }
